--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "hammerjs": "^2.0.8",
     "http": "0.0.0",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "mydaterangepicker": "^4.2.1",
     "ngx-image-gallery": "^1.3.1",
     "ngx-pinch-zoom": "^1.0.7",
